# mandelbrot

./: .gitignore  Features.txt  README.md  index.html  mandelbrot.js  style.css  style.css.map
MPIHelloWorld/: main.cpp  pingpong.cpp
backend/: .gitignore  CMakeLists.txt  Dockerfile  Fractal.h  Mandelbrot.h  Mandelbrot.sln  README.md  README.txt  build.sh  hosts  main.cpp  run.sh  run_docker.sh  run_himmuc.sh  runconfig
backend/Mandelbrot/: Mandelbrot.vcxproj  Mandelbrot.vcxproj.filters  main.cpp
backend/devDockerImage/: Dockerfile  build.sh
backend/dockerLibBaseImage/: Dockerfile  build.sh
backend/himmuc/: README.md  build_mandelbrot.sh  devssh.sh  findings.md  install_boost.sh  install_hlibs.sh  install_libs.sh  mount.sh  slurm_run.conf  ssh.sh  start_backend.py  start_himmuc.py  stop_srun.sh  unmount.sh  update_hlibs.sh  who_is_running.sh
backend/include/: Balancer.h  BalancerPolicy.h  BalancingContext.h  Client.h  ColumnBalancer.h  Fractal.h  Host.h  Info.h  IntegerBalancer.h  Mandelbrot.h  Mandelbrot32.h  Mandelbrot64.h  MandelbrotOpenMP.h  MandelbrotOpenMP32.h  MandelbrotOpenMP64.h  MandelbrotOpenMPSIMD32.h  MandelbrotOpenMPSIMD64.h  MandelbrotOpt.h  MandelbrotSIMD16.h  MandelbrotSIMD32.h  MandelbrotSIMD64.h  MandelbrotSimd.h  MandelbrotVect.h  NaiveBalancer.h  Predicter.h  Prediction.h  PredictionBalancer.h  RecursiveNaiveBalancer.h  RecursivePredictionBalancer.h  Region.h  RegionData.h  RegionOld.h  Returned.h  Tile.h  TileData.h  TileInfo.h  Worker.h  WorkerInfo.h  init.h
backend/src/: host.main.cpp  init.cpp  main.cpp  worker.main.cpp
backend/src/Actors/: Host.cpp
backend/src/actors/: Client.cpp  Host.cpp  Worker.cpp
backend/src/balancer/: Balancer.cpp  BalancerPolicy.cpp  ColumnBalancer.cpp  IntegerBalancer.cpp  NaiveBalancer.cpp  Predicter.cpp  PredictionBalancer.cpp  RecursiveNaiveBalancer.cpp  RecursivePredictionBalancer.cpp
backend/src/mandelbrot/: Fractal.cpp  Fractal.h  Mandelbrot.cpp  Mandelbrot.h  Mandelbrot32.cpp  Mandelbrot64.cpp  MandelbrotOpenMP.cpp  MandelbrotOpenMP32.cpp  MandelbrotOpenMP64.cpp  MandelbrotOpenMPSIMD32.cpp  MandelbrotOpenMPSIMD64.cpp  MandelbrotOpt.cpp  MandelbrotSIMD32.cpp  MandelbrotSIMD64.cpp  MandelbrotSimd.cpp  MandelbrotVect.cpp
backend/test/: test.c
backend/tests/: .gitignore  CMakeLists.txt  README.md  TestBalancer.cpp
doc/: Poster.pptx
doc/ausarbeitung/: Anhang.tex  Ausarbeitung.tex  Einleitung.tex  Evaluation.tex  Hintergrund.tex  Implementierung.tex  Installation.tex  Loesungsansatz.tex  Makefile  Preamble.tex  Problemstellung.tex  README  Spezifikation.tex  Zusammenfassung.tex  aspdoc.cls  bibliography.bib  regionData.short.json
eval/: .gitignore  CONFIG.md  CreateGraph.ipynb  Distribution_function.ipynb  README.md  balancers_eval.ipynb  computationTime.ipynb  config.json  create_env.sh  implementations_eval.ipynb  implementations_no_q_eval.ipynb  implementations_test.ipynb  install.sh  requirements.txt  result.txt
eval/.ipynb_checkpoints/: implementations_eval-checkpoint.ipynb
eval/balancers/: Distribution_function.ipynb  balancers_distribution.ipynb  balancers_eval.ipynb  data_balancers_border.json  data_balancers_border_2.json  data_balancers_border_mandelbrot.json  data_balancers_inside.json  data_balancers_inside_2.json  data_balancers_outside.json  data_balancers_prediction_accuracy (-4 - 8, 2, 10 runs).json  data_balancers_prediction_accuracy (-4 - 8, 2, 10 runs, 2nd pass).json  data_balancers_prediction_accuracy.json  data_balancers_prediction_accuracy_single.json  prediction_accuracy.ipynb
eval/configs/: balancers_border_mandelbrot.json  balancers_inside_mandelbrot.json  balancers_naive.json  balancers_outside_mandelbrot.json  balancers_prediction_accuracy.json  balancers_prediction_accuracy2.json  balancers_prediction_accuracy_single.json  configSIMD.json  config_template.json  parallel_2_MPI.json  parallel_2_MPI_2.json  parallel_4_MPI.json  parallel_4_MPI_2.json  parallel_4_OpenMP.json  parallel_4_OpenMP_2.json  parallel_normal.json  parallel_normal_2.json  scaling_border_mandelbrot.json  scaling_border_more_nodes.json  scaling_inside_mandelbrot.json  scaling_inside_more_nodes.json  scaling_outside_mandelbrot.json  scaling_outside_more_nodes.json  sum_base_case.json  sum_prediction.json  sum_prediction_MPI.json  sum_prediction_MPI_SIMD.json  sum_prediction_MPI_SIMD_32bit.json  sum_prediction_OpenMP.json  sum_prediction_OpenMP_SIMD.json  sum_prediction_OpenMP_SIMD_32bit.json  sum_prediction_SIMD.json
eval/configurations/: config.basic.json  config.json
eval/data/: balancers.json  eval_output.json  implementations.json  implementations_no_q.json  implementations_test.json  statsExample.json
eval/overall/: overall-Copy1.ipynb  (+1 more)
frontend/: .eslintrc  .eslintrc.json  .gitignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js  webpack.prod.js
(+221 files in other folders)
